# nostrarchives-api

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  ONDEMAND_FETCHER.md  README.md  docker-compose.yml
docs/: NIP_REFERENCE.md
migrations/: 001_create_events.sql  002_create_event_tags.sql  003_create_event_refs.sql  004_create_follows.sql  005_backfill_zap_amounts.sql  006_profile_search.sql  007_crawl_state.sql  008_char64_to_text.sql  009_trending_indexes.sql  010_relay_capabilities.sql  011_negentropy_sync_state.sql  012_daily_analytics.sql  013_profile_tab_optimizations.sql  014_v2_counter_columns.sql  015_seen_events.sql  016_wot_scores.sql  017_update_profile_search.sql  018_backfill_zap_amounts.sql  019_analytics_materialized_views.sql  020_scheduled_events.sql  021_exponential_backfill.sql  022_missing_events.sql  023_reset_zap_negentropy.sql  024_analytics_leaderboard_views.sql  025_profile_tab_sort_indexes.sql  026_zap_metadata_created_at_index.sql  027_hashtag_gin_index.sql  028_perf_missing_indexes.sql  029_follows_composite_indexes.sql  030_trending_covering_index.sql  031_trending_composite_indexes.sql  032_drop_event_tags.sql  033_search_index.sql  034_note_hashtags.sql  035_simplify_profile_search.sql  036_follows_source_event_id_index.sql  037_blocked_pubkeys.sql  038_blocked_hashtags.sql  039_blocked_search_terms.sql  040_crawl_state_zaps_crawled_at.sql  (+1 more)
scripts/: README.md  daily_cleanup.sh  daily_cleanup.sql  purge_low_followers.sql
src/: auth.rs  block_cache.rs  config.rs  error.rs  follower_cache.rs  lib.rs  live_metrics.rs  main.rs  (+4 more)
(+23 files in other folders)
